--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -12786,17 +12786,18 @@ Preloader
 
 #main-wrapper[data-layout='vertical'] .left-sidebar[data-sidebarbg='skin6'] .sidebar-nav ul .sidebar-item .sidebar-link,
 #main-wrapper[data-layout='horizontal'] .left-sidebar[data-sidebarbg='skin6'] .sidebar-nav ul .sidebar-item .sidebar-link {
-    color: #212529;
+    color: #777D74;
+    font-weight: 300;
 }
 
 #main-wrapper[data-layout='vertical'] .left-sidebar[data-sidebarbg='skin6'] .sidebar-nav ul .sidebar-item .sidebar-link i,
 #main-wrapper[data-layout='horizontal'] .left-sidebar[data-sidebarbg='skin6'] .sidebar-nav ul .sidebar-item .sidebar-link i {
-    color: #4f5467;
+    color: #777D74;
 }
 
 #main-wrapper[data-layout='vertical'] .left-sidebar[data-sidebarbg='skin6'] .sidebar-nav ul .nav-small-cap,
 #main-wrapper[data-layout='horizontal'] .left-sidebar[data-sidebarbg='skin6'] .sidebar-nav ul .nav-small-cap {
-    color: #212529;
+    color: #777D74;
     opacity: 0.7;
 }
 
@@ -12828,7 +12829,7 @@ Preloader
 }
 
 .page-wrapper {
-    background: #eef5f9;
+    background: #FAFAFB;
     position: relative;
     transition: 0.2s ease-in;
     display: none;
@@ -13373,7 +13374,8 @@ sidebar navigation
 .sidebar-nav ul .sidebar-item .sidebar-link.active,
 .sidebar-nav ul .sidebar-item .sidebar-link:hover {
     opacity: 1;
-    background:#F6F9FC;
+    background-color: #F5FBFF !important;   
+    color: #50B4FC !important;
 }
 
 .sidebar-nav ul .sidebar-item.selected>.sidebar-link,
