Create post from forntend with multiple image and delete comment

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -12676,7 +12676,7 @@ Preloader
 #main-wrapper[data-layout='vertical'] .topbar[data-navbarbg='skin1'],
 #main-wrapper[data-layout='horizontal'] .topbar .navbar-collapse[data-navbarbg='skin1'],
 #main-wrapper[data-layout='horizontal'] .topbar[data-navbarbg='skin1'] {
-    background: #2962ff;
+    background: #ffffff;
 }
 
 #main-wrapper[data-layout='vertical'] .topbar .navbar-collapse[data-navbarbg='skin2'],
