--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -96,13 +96,14 @@
 .home__feed__posts__images {
     display: flex;
     justify-content: space-between;
-
+    flex-wrap: wrap;
 }
 
-.home__feed__posts__image{
+.home__feed__posts__image{  
     width: 48%;
     height: 200px;
     border-radius: 5px;
+    margin-bottom: 20px;
 }
 
 .home__like__btn__icon {
@@ -136,4 +137,20 @@
 
 .home__feed__createPost__button:hover {
     background-color: #2AA3FB !important;
+}
+
+.home__comment__dropdown {
+    margin-left: auto;
+    right: 20px;
+    bottom: 10px;
+    height: 35px;
+    width: 20px;
+}
+
+.post__image__preview {
+    height: 100px;
+    width: 100px;
+    border-radius: 10px;
+    margin-left: 20px;
+    margin-top: 1rem;
 }
